bugfix and update for windows env

--- a/design.ipynb
+++ b/design.ipynb
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process completed. GenBank files have been created in the folder of /home/haseong/dev/combinatorial_design/projects/haseong_240704/parts/insert\n"
+      "Process completed. GenBank files have been created in the folder of c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\parts\\insert\n"
      ]
     }
    ],
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process completed. GenBank files have been created in the folder of /home/haseong/dev/combinatorial_design/projects/haseong_240704/parts/withvector\n"
+      "Process completed. GenBank files have been created in the folder of c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\parts\\withvector\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='/home/haseong/dev/combinatorial_design/projects/haseong_240704/modules/inserts/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2.gb' target='_blank'>/home/haseong/dev/combinatorial_design/projects/haseong_240704/modules/inserts/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2.gb</a></font><br>"
+       "<font face=monospace><a href='c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\modules\\inserts/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2.gb' target='_blank'>c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\modules\\inserts/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2.gb</a></font><br>"
       ]
      },
      "metadata": {},
@@ -245,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='/home/haseong/dev/combinatorial_design/projects/haseong_240704/modules/withvector/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2_withvector.gb' target='_blank'>/home/haseong/dev/combinatorial_design/projects/haseong_240704/modules/withvector/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2_withvector.gb</a></font><br>"
+       "<font face=monospace><a href='c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\modules\\withvector/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2_withvector.gb' target='_blank'>c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\modules\\withvector/VA8-BBa_J23106-BBa_B0032-IspA-L2U3H03-VA2_withvector.gb</a></font><br>"
       ]
      },
      "metadata": {},
@@ -290,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/inserts/MM2/MM2_0015.gb' target='_blank'>/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/inserts/MM2/MM2_0015.gb</a></font><br>"
+       "<font face=monospace><a href='c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\inserts\\MM2\\MM2_0015.gb' target='_blank'>c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\inserts\\MM2\\MM2_0015.gb</a></font><br>"
       ]
      },
      "metadata": {},
@@ -321,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/withvector/MM2/MM2_0015_withvector.gb' target='_blank'>/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/withvector/MM2/MM2_0015_withvector.gb</a></font><br>"
+       "<font face=monospace><a href='c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\withvector\\MM2\\MM2_0015_withvector.gb' target='_blank'>c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\withvector\\MM2\\MM2_0015_withvector.gb</a></font><br>"
       ]
      },
      "metadata": {},
@@ -360,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/withvector/MM3/MM3_0010_withvector.gb' target='_blank'>/home/haseong/dev/combinatorial_design/projects/haseong_240704/pathways/withvector/MM3/MM3_0010_withvector.gb</a></font><br>"
+       "<font face=monospace><a href='c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\withvector\\MM3\\MM3_0010_withvector.gb' target='_blank'>c:\\mydocs\\2024\\dev\\combinatorial_design\\projects\\haseong_240704\\pathways\\withvector\\MM3\\MM3_0010_withvector.gb</a></font><br>"
       ]
      },
      "metadata": {},
@@ -383,12 +383,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_pathway_combination_list[0].list_features()"
+    "- 최종 7개 유전자 조합, 11kbp vector map 자동 완성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](images/pathway_final.png)"
    ]
   }
  ],
