--- a/design.ipynb
+++ b/design.ipynb
@@ -3,16 +3,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Combinatorial Part Design\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Combinatorial Part Design\n",
+    "\n",
     "- 부품/모듈 조합을 설계하고 genbank 및 fasta 파일 생성하는 프로그램\n",
     "- 설계는 엑셀로 (`assembly_design.xlsx`) 수행하고 이를 기반으로 genbank 및 fasta 파일을 생성\n",
+    "\n",
+    "# TODO\n",
+    "\n",
+    "- 다른 종류 vector 적용시 작동 확인 필요\n",
+    "- excel file template 자동 저장\n",
     "\n",
     "## 1. 사용법 간단한 설명\n",
     "- 임의의 폴더 위치에서 다음 입력 (command line)\n",
